Fixed spacing and centering with "table"

--- a/TributeToBarb/style.css
+++ b/TributeToBarb/style.css
@@ -27,6 +27,8 @@ body {
 
 .img-thumbnail {
   background-color: #262626;
+  margin-left: 400px;
+  margin-right: 400px;
 }
 .caption p {
   margin-top: 15px;
@@ -40,10 +42,18 @@ h3 {
 }
 
 .timeline {
-  display: inline-block;
+  display: table;
+  margin: auto;
 }
+
 blockquote {
   background-color: #262626;
+  display: table;
+  margin: auto;
+}
+
+footer p {
+  margin-top: 20px;
 }
 
 button:hover {
